Inventory-Service/k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
