Inventory-Service/k8s/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dc-project.com
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 80
